add some custom content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,6 +227,7 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <p>Here is some custom content 👌👌👌</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
